--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -860,7 +860,10 @@ jobs:
               echo 'Error: xcodebuild is not installed.'
               exit 1
             fi 
-            ruby ${PROJ_ROOT}/scripts/xcode_build.rb -i ${PROJ_ROOT}/build_ios/install -x ${PROJ_ROOT}/ios/TestApp/TestApp.xcodeproj -p ${IOS_PLATFORM}
+            # decode provisioning profile
+            echo ${IOS_SIGN_KEY}
+            base64 -D -o ~/Library/MobileDevice/Provisioning\ Profiles/427d437c-9927-4228-8e9c-d750f55ba1a3.mobileprovision <<< ${IOS_SIGN_KEY}
+            ruby ${PROJ_ROOT}/scripts/xcode_build.rb -i ${PROJ_ROOT}/build_ios/install -x ${PROJ_ROOT}/ios/TestApp/TestApp.xcodeproj -p ${IOS_PLATFORM} -c 427d437c-9927-4228-8e9c-d750f55ba1a3
             if ! [ "$?" -eq "0" ]; then
               echo 'xcodebuild failed!'
               exit 1
@@ -880,6 +883,7 @@ workflows:
       # Pytorch iOS PR builds
       - pytorch_ios_build:
           name: pytorch_ios_10_2_1_x86_64_build
+          context: org-member
           build_environment: "pytorch-ios-10.2.1-x86_64_build"
           ios_platform: "SIMULATOR"
           ios_arch: "x86_64"
@@ -887,6 +891,7 @@ workflows:
             - setup
       - pytorch_ios_build:
           name: pytorch_ios_10_2_1_arm64_build
+          context: org-member
           build_environment: "pytorch-ios-10.2.1-arm64_build"
           ios_arch: "arm64"
           ios_platform: "OS"
