--- a/.circleci/verbatim-sources/workflows-pytorch-ios-builds.yml
+++ b/.circleci/verbatim-sources/workflows-pytorch-ios-builds.yml
@@ -1,6 +1,7 @@
       # Pytorch iOS PR builds
       - pytorch_ios_build:
           name: pytorch_ios_10_2_1_x86_64_build
+          context: org-member
           build_environment: "pytorch-ios-10.2.1-x86_64_build"
           ios_platform: "SIMULATOR"
           ios_arch: "x86_64"
@@ -8,6 +9,7 @@
             - setup
       - pytorch_ios_build:
           name: pytorch_ios_10_2_1_arm64_build
+          context: org-member
           build_environment: "pytorch-ios-10.2.1-arm64_build"
           ios_arch: "arm64"
           ios_platform: "OS"
