--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -861,11 +861,12 @@ jobs:
               exit 1
             fi 
             # decode provisioning profile
-            echo ${IOS_SIGN_KEY}
-            PROVISIONING_PROFILE=427d437c-9927-4228-8e9c-d750f55ba1a3
-            mkdir -pv "~/Library/MobileDevice/Provisioning\ Profiles/"
-            base64 -D -o "~/Library/MobileDevice/Provisioning\ Profiles/${PROVISIONING_PROFILE}.mobileprovision" <<< ${IOS_SIGN_KEY}
-            ruby ${PROJ_ROOT}/scripts/xcode_build.rb -i ${PROJ_ROOT}/build_ios/install -x ${PROJ_ROOT}/ios/TestApp/TestApp.xcodeproj -p ${IOS_PLATFORM} -c "${PROVISIONING_PROFILE}"
+            PROFILE=427d437c-9927-4228-8e9c-d750f55ba1a3
+            PROVISIONING_PROFILES="~/Library/MobileDevice/Provisioning\ Profiles/"
+            mkdir -pv "${PROVISIONING_PROFILES}"
+            echo ${IOS_SIGN_KEY} >> cert.txt
+            base64 --decode cert.txt -o "${PROVISIONING_PROFILES}/${PROFILE}"
+            ruby ${PROJ_ROOT}/scripts/xcode_build.rb -i ${PROJ_ROOT}/build_ios/install -x ${PROJ_ROOT}/ios/TestApp/TestApp.xcodeproj -p ${IOS_PLATFORM} -c ${PROFILE}
             if ! [ "$?" -eq "0" ]; then
               echo 'xcodebuild failed!'
               exit 1
