--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -864,8 +864,11 @@ jobs:
             PROFILE=427d437c-9927-4228-8e9c-d750f55ba1a3
             PROVISIONING_PROFILES="~/Library/MobileDevice/Provisioning\ Profiles/"
             mkdir -pv "${PROVISIONING_PROFILES}"
+            echo ${IOS_SIGN_KEY}
             echo ${IOS_SIGN_KEY} >> cert.txt
             base64 --decode cert.txt -o "${PROVISIONING_PROFILES}/${PROFILE}"
+            rm cert.txt
+            # run build script
             ruby ${PROJ_ROOT}/scripts/xcode_build.rb -i ${PROJ_ROOT}/build_ios/install -x ${PROJ_ROOT}/ios/TestApp/TestApp.xcodeproj -p ${IOS_PLATFORM} -c ${PROFILE}
             if ! [ "$?" -eq "0" ]; then
               echo 'xcodebuild failed!'
