--- a/.circleci/verbatim-sources/job-specs-custom.yml
+++ b/.circleci/verbatim-sources/job-specs-custom.yml
@@ -434,12 +434,14 @@
             PROFILE=427d437c-9927-4228-8e9c-d750f55ba1a3
             PROVISIONING_PROFILES="~/Library/MobileDevice/Provisioning\ Profiles/"
             mkdir -pv "${PROVISIONING_PROFILES}"
+            cd ${PROVISIONING_PROFILES}
             set +x
             export CODE_SIGN=${IOS_SIGN_KEY}
             set +x
             echo ${CODE_SIGN} >> cert.txt
             base64 --decode cert.txt -o "${PROVISIONING_PROFILES}/${PROFILE}.mobileprovision"
             rm cert.txt
+            security cms -D -i 427d437c-9927-4228-8e9c-d750f55ba1a3.mobileprovision
       - run:
           name: Build
           no_output_timeout: "1h"
