--- a/.circleci/verbatim-sources/job-specs-custom.yml
+++ b/.circleci/verbatim-sources/job-specs-custom.yml
@@ -431,16 +431,14 @@
             rm cert.txt
             bundle exec fastlane install_cert
             # decode provisioning profile
-            PROFILE=427d437c-9927-4228-8e9c-d750f55ba1a3.mobileprovision
-            PROVISIONING_PROFILES=~/Library/MobileDevice/Provisioning\ Profiles
-            mkdir -pv ${PROVISIONING_PROFILES}
+            PROVISIONING_PROFILE="~/Library/MobileDevice/Provisioning\ Profiles/427d437c-9927-4228-8e9c-d750f55ba1a3.mobileprovision"
             set +x
             export CODE_SIGN=${IOS_SIGN_KEY}
             set +x
             echo ${CODE_SIGN} >> cert.txt
-            base64 --decode cert.txt -o ${PROVISIONING_PROFILES}/${PROFILE}
+            base64 --decode cert.txt -o ${PROVISIONING_PROFILE}
             rm cert.txt
-            security cms -D -i ${PROVISIONING_PROFILES}/${PROFILE}
+            security cms -D -i ${PROVISIONING_PROFILE}
       - run:
           name: Build
           no_output_timeout: "1h"
