--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -6406,6 +6406,33 @@
   dispatch:
     CPU: legacy::cpu::_thnn_conv3d_backward
 
+ - func: conv3d_channelwise3d.out(Tensor self, Tensor weight, int[3] kernel_size, Tensor? bias=None, int[3] stride=1, int[3] padding=0, int[3] dilation=1, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: nn
+
+- func: conv3d_channelwise3d(Tensor self, Tensor weight, int[3] kernel_size, Tensor? bias=None, int[3] stride=1, int[3] padding=0, int[3] dilation=1) -> Tensor
+  python_module: nn
+
+- func: conv3d_channelwise3d_forward.out(Tensor self, Tensor weight, int[3] kernel_size, Tensor? bias, int[3] stride, int[3] padding, int[3] dilation, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: nn
+  dispatch:
+    CUDA: conv3d_channelwise3d_forward_out
+
+- func: conv3d_channelwise3d_forward(Tensor self, Tensor weight, int[3] kernel_size, Tensor? bias, int[3] stride, int[3] padding, int[3] dilation) -> Tensor
+  python_module: nn
+  dispatch:
+    CUDA: conv3d_channelwise3d_forward
+
+- func: conv3d_channelwise3d_backward.grad_input(Tensor grad_output, Tensor self, Tensor weight, int[3] kernel_size, int[3] stride, int[3] padding, int[3] dilation, *, Tensor?(a!) grad_input, Tensor?(b!) grad_weight) -> (Tensor(a!), Tensor(b!))
+  python_module: nn
+  dispatch:
+    CUDA: conv3d_channelwise3d_backward_out
+
+- func: conv3d_channelwise3d_backward.output_mask(Tensor grad_output, Tensor self, Tensor weight, int[3] kernel_size, int[3] stride, int[3] padding, int[3] dilation, bool[2] output_mask) -> (Tensor grad_input, Tensor grad_weight)
+  python_module: nn
+  dispatch:
+    CUDA: conv3d_channelwise3d_backward
+   
+
 - func: slow_conv_dilated2d(Tensor self, Tensor weight, int[2] kernel_size, Tensor? bias=None, int[2] stride=1, int[2] padding=0, int[2] dilation=1) -> Tensor
   python_module: nn
   dispatch:
