--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -398,16 +398,16 @@
   index: non_differentiable
 
 - name: index_copy_(Tensor(a!) self, int dim, Tensor index, Tensor source) -> Tensor(a!)
-  self: grad.clone().index_fill_(dim, index, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).index_fill_(dim, index, 0)
   source: grad.index_select(dim, index)
   index: non_differentiable
 
 - name: index_fill_.Scalar(Tensor(a!) self, int dim, Tensor index, Scalar value) -> Tensor(a!)
-  self: grad.clone().index_fill_(dim, index, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).index_fill_(dim, index, 0)
   index: non_differentiable
 
 - name: index_fill_.Tensor(Tensor(a!) self, int dim, Tensor index, Tensor value) -> Tensor(a!)
-  self: grad.clone().index_fill_(dim, index, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).index_fill_(dim, index, 0)
   value: grad.index_select(dim, index).sum()
   index: non_differentiable
 
@@ -492,16 +492,16 @@
   self: not_implemented("lu_solve")
 
 - name: masked_fill_.Scalar(Tensor(a!) self, Tensor mask, Scalar value) -> Tensor(a!)
-  self: grad.clone().masked_fill_(mask, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).masked_fill_(mask, 0)
   mask: non_differentiable
 
 - name: masked_fill_.Tensor(Tensor(a!) self, Tensor mask, Tensor value) -> Tensor(a!)
-  self: grad.clone().masked_fill_(mask, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).masked_fill_(mask, 0)
   value: at::where(mask, grad, zeros_like(grad)).sum()
   mask: non_differentiable
 
 - name: masked_scatter_(Tensor(a!) self, Tensor mask, Tensor source) -> Tensor(a!)
-  self: grad.clone().masked_fill_(mask, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).masked_fill_(mask, 0)
   source: masked_scatter_backward(grad, mask, source.sizes())
   mask: non_differentiable
 
@@ -519,8 +519,8 @@
   self: select_equals_backward(grad, self, result)
 
 - name: max.other(Tensor self, Tensor other) -> Tensor
-  self: grad.clone().masked_fill_(self <= other, 0)
-  other: grad.clone().masked_fill_(self > other, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).masked_fill_(self <= other, 0)
+  other: grad.clone(at::MemoryFormat::Contiguous).masked_fill_(self > other, 0)
 
 - name: mean(Tensor self, *, ScalarType? dtype=None) -> Tensor
   self: grad.expand(self.sizes()).to(self.scalar_type()) / self.numel()
@@ -555,8 +555,8 @@
   self: select_equals_backward(grad, self, result)
 
 - name: min.other(Tensor self, Tensor other) -> Tensor
-  self: grad.clone().masked_fill_(self >= other, 0)
-  other: grad.clone().masked_fill_(self < other, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).masked_fill_(self >= other, 0)
+  other: grad.clone(at::MemoryFormat::Contiguous).masked_fill_(self < other, 0)
 
 - name: mm(Tensor self, Tensor mat2) -> Tensor
   self: mm_mat1_backward(grad, mat2, self, 1)
@@ -678,7 +678,7 @@
   self: prod_backward(grad, self.to(grad.scalar_type()), result, dim, keepdim)
 
 - name: put_(Tensor(a!) self, Tensor index, Tensor source, bool accumulate=False) -> Tensor(a!)
-  self: grad.clone().put_(index, zeros_like(source), accumulate)
+  self: grad.clone(at::MemoryFormat::Contiguous).put_(index, zeros_like(source), accumulate)
   index: non_differentiable
   source: grad.take(index)
 
@@ -723,12 +723,12 @@
   self: -0.5 * grad * result.pow(3)
 
 - name: scatter_.src(Tensor(a!) self, int dim, Tensor index, Tensor src) -> Tensor(a!)
-  self: grad.clone().scatter_(dim, index, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).scatter_(dim, index, 0)
   index: non_differentiable
   src: grad.gather(dim, index)
 
 - name: scatter_.value(Tensor(a!) self, int dim, Tensor index, Scalar value) -> Tensor(a!)
-  self: grad.clone().scatter_(dim, index, 0)
+  self: grad.clone(at::MemoryFormat::Contiguous).scatter_(dim, index, 0)
   index: non_differentiable
 
 - name: scatter_add_(Tensor(a!) self, int dim, Tensor index, Tensor src) -> Tensor(a!)
