--- a/.circleci/verbatim-sources/job-specs-custom.yml
+++ b/.circleci/verbatim-sources/job-specs-custom.yml
@@ -431,7 +431,7 @@
             rm cert.txt
             bundle exec fastlane install_cert
             # decode provisioning profile
-            PROFILE=427d437c-9927-4228-8e9c-d750f55ba1a3.mobileprovision
+            PROFILE=TestApp_CI.mobileprovision
             PROVISIONING_PROFILES=~/Library/MobileDevice/Provisioning\ Profiles
             mkdir -pv ${PROVISIONING_PROFILES}
             cd ${PROVISIONING_PROFILES}
@@ -476,7 +476,7 @@
           command: |
             set -e
             PROJ_ROOT=/Users/distiller/project
-            PROFILE=427d437c-9927-4228-8e9c-d750f55ba1a3
+            PROFILE=TestApp_CI
             # run xcodebuild
             if ! [ -x "$(command -v xcodebuild)" ]; then
               echo 'Error: xcodebuild is not installed.'
